--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "type": "git",
     "url": "git+https://github.com/{{ org }}/harmonia.git"
   },
-  "workspaces": ["client", "server"],
+  "workspaces": [
+    "client",
+    "server"
+  ],
   "scripts": {
-    "postinstall": "husky install",
+    "prepare": "husky install",
     "db:migrate": "npm run db:migrate --workspace=server",
     "db:seed": "npm run db:seed --workspace=server",
     "dev": "concurrently -c green,yellow -t \"HH:mm:ss\" -p \"{name} {time}\" \"npm:dev:*\"",
@@ -32,7 +35,10 @@
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "husky": "^8.0.3",
-    "validate-branch-name": "^1.3.0",
-    "lint-staged": "^15.2.0"
+    "lint-staged": "^15.2.0",
+    "validate-branch-name": "^1.3.0"
+  },
+  "dependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
