--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "server"
   ],
   "scripts": {
-    "postinstall": "[ \"$NODE_ENV\" = production ] || husky install",
+    "postinstall": "[ \"$NODE_ENV\" != \"production\" ] && husky install",
     "db:migrate": "npm run db:migrate --workspace=server",
     "db:seed": "npm run db:seed --workspace=server",
     "dev": "concurrently -c green,yellow -t \"HH:mm:ss\" -p \"{name} {time}\" \"npm:dev:*\"",
