--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.1",
   "private": true,
   "description": "",
-  "homepage": "https://github.com/{{ org }}/harmonia#readme",
   "bugs": {
     "url": "https://github.com/{{ org }}/harmonia/issues"
   },
@@ -16,7 +15,7 @@
     "server"
   ],
   "scripts": {
-    "postinstall": "node -e \"if (process.env.NODE_ENV === 'production'){process.exit(1)} \" || husky install",
+    "postinstall": "node -e \"if (process.env.NODE_ENV !== 'production')\" && husky install",
     "db:migrate": "npm run db:migrate --workspace=server",
     "db:seed": "npm run db:seed --workspace=server",
     "dev": "concurrently -c green,yellow -t \"HH:mm:ss\" -p \"{name} {time}\" \"npm:dev:*\"",
